funland/homer-app/homer/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homer-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  labels:
    app: homer
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: homer
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: homer
    spec:
      containers:
      - image: b4bz/homer:v25.03.3
        name: homer
        volumeMounts:
        - name: assets
          mountPath: /www/assets
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1"
            memory: 64Mi
            ephemeral-storage: 64Mi
          requests:
            cpu: 10m
            memory: 16Mi
      volumes:
      - name: assets
        persistentVolumeClaim:
          claimName: homer-pvc
          readOnly: false
