funland/homer-app/homer/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homer
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "homer.batlab.io"
  rules:
    - backendRefs:
        - name: homer
          port: 8080
